# qhery

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
data/: example.bcftools.vcf  example.csq.tsv  example2.bcftools.vcf  example2.csq.tsv  example3.bcftools.vcf  example3.csq.tsv  example4.bcftools.vcf  example4.csq.tsv  example5.bcftools.vcf  example5.csq.tsv  example6.bcftools.vcf  example6.csq.tsv
paper/: flowchart.drawio  paper.bib  paper.md
qhery/: __main__.py  get_mutants.py  get_tables_sql.py  make_output.py  monitor_tables.py
qhery/data/: Sars_cov_2.ASM985889v3.101.gff3  nsp_coords.tsv  proteins.faa  resistance_table.tsv
scripts/: create_table_2.py
tests/: test_get_mutants.py
