[tool.poetry]
name = "qhery"
version = "0.1.2"
description = "SARS-CoV-2 resistance analysis tool."
authors = ["Mitchell Sullivan <mjsull@gmail.com>"]
readme = "README.md"

[tool.poetry.urls]
"Homepage" = "https://github.com/mjsull/qhery"
"Bug Tracker" = "https://github.com/mjsull/qhery/issues"

[tool.poetry.dependencies]
python = ">=3.7"
pysam = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qhery = "qhery.__main__:main"

[tool.black]
line-length = 120
skip_string_normalization = true

[tool.pylint.format]
max-line-length = "120"